force-app/main/default/objects/FACS_DL_List_Email__c/FACS_DL_List_Email__c.object-meta.xml
<CustomObject>
    <description>DL emails</description>
    <label>FACS_DL_List_Email</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FACS_DL_List_Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>