force-app/main/default/objects/FACS_DL_List_Email__c/fields/FACS_DL_List__c.field-meta.xml
<CustomField>
    <fullName>FACS_DL_List__c</fullName>
    <label>Distribution List</label>
    <referenceTo>FACS_DL_Lists__c</referenceTo>
    <relationshipLabel>FACS_DL_List_Emails</relationshipLabel>
    <relationshipName>FACS_DL_List_Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>