force-app/main/default/objects/FACS_DL_List_Email__c/fields/FACS_Email__c.field-meta.xml
<CustomField>
    <fullName>FACS_Email__c</fullName>
    <description>email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>