force-app/main/default/objects/FACS_DL_List_Email__c/fields/FACS_Station__c.field-meta.xml
<CustomField>
    <fullName>FACS_Station__c</fullName>
    <description>Reciepient station(s)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Station</label>
    <length>100</length>
    <type>Text</type>
</CustomField>