force-app/main/default/objects/FACS_DL_List_Email__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FACS_Station__c</columns>
    <columns>FACS_Email__c</columns>
    <columns>FACS_DL_List__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>